fix header z-index

--- a/app/blocks/header/header.scss
+++ b/app/blocks/header/header.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 175px;
   background-color: $color-white;
-  z-index: 9000;
+  z-index: 994;
 
   @include respond-to('laptop') {
     padding: 0 15px;
